<resources>
    <string name="app_name">Vircle</string>
    <string name="default_web_client_id">AIzaSyC6Zx7EPbi9uexCfjt_5LdqI4PHgH4PrCA.apps.googleusercontent.com</string>
    <string name="session_expired">session_expired</string>
    <string name="alert">Alert</string>
    <string name="post_detail">Post Detail</string>
    <string name="please_try_again">Please try again</string>
    <string name="plz_wait">Plz wait</string>
    <string name="error_found">Error Found</string>
    <string name="click_me">Click Me</string>
    <string name="android_base_2025">Android Base 2025</string>
    <string name="todo">TODO</string>
    <string name="cancel">Cancel</string>
    <string name="welcome_to_vircle">Welcome to Vircle</string>
    <string name="create_your_own_ai_friends">Create your own AI friends</string>
    <string name="create_your_own_ai_friends_Second">Meet your new AI friends, crafted by you.</string>
    <string name="next">Next</string>
    <string name="delete">Delete</string>
    <string name="clear">Clear</string>
    <string name="logout">Log out</string>
    <string name="delete_ai_contact">Delete ai contact</string>
    <string name="clear_chat">Clear Chat</string>
    <string name="are_you_sure_to_logout">Are you sure you want to logout ?</string>
    <string name="are_you_sure_to_delete_contact">Are you sure you want to delete\n this contact ?</string>
    <string name="are_you_sure_to_delete_chat">Are you sure you want to clear\n this chat ?</string>
    <string name="are_you_sure_to_delete_account">Are you sure you want to delete\nthis account?</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="log_in">Log In</string>
    <string name="your_ai_companions_are_waiting_to_chat">Your AI companions are\nwaiting to chat.</string>
    <string name="enter_your_email_address">Enter your email address</string>
    <string name="your_password">Your Password</string>
    <string name="forget_your_password">Forget Your Password?</string>
    <string name="or">Or</string>
    <string name="continue_with">Continue with</string>
    <string name="google_account">Google Account</string>
    <string name="email_adress">Email Adress</string>
    <string name="register_with">Register with</string>
    <string name="register_with_nemail_adress">Register with\nEmail Adress</string>
    <string name="your_name">Your Name</string>
    <string name="your_surname">Your Surname</string>
    <string name="your_password_again">Your Password Again</string>
    <string name="create_my_account">Create My Account</string>
    <string name="tell_us_about_nyourself">Tell Us About\nYourself</string>
    <string name="male">male</string>
    <string name="_24">24</string>
    <string name="choose_a_profile_picture_for_your_ai_contact">Choose a profile picture for your Ai contact</string>
    <string name="gender">Gender</string>
    <string name="age">Age</string>
    <string name="terms_amp_conditions"><![CDATA[Terms & Conditions]]></string>

    <string name="privacy_policy_desc">Lorem ipsum dolor sit amet consectetur. Sed duis viverra ullamcorper donec mi lorem. Tempor morbi bibendum fringilla pulvinar tempor libero diam. Donec velit enim turpis diam dui. At risus elementum felis amet id. Mus consectetur molestie vestibulum et nibh. Urna vitae consectetur sit blandit at tortor sit. Suspendisse eu ut lacus nulla. Orci tristique interdum ante sit. Consequat pellentesque sed et donec. Ipsum ut commodo quis orci sed praesent. Lectus et augue risus facilisis laoreet. Posuere mi orci aliquet ornare et. Ipsum sed tincidunt velit morbi amet sollicitudin purus odio. Sit cras ullamcorper consectetur pretium vulputate. Mi nullam erat dignissim in platea. Vel interdum mauris nec iaculis a. A amet hac mi tortor mauris feugiat arcu etiam. Volutpat cursus tempor malesuada mattis vitae eget. Eget molestie pellentesque nisl fermentum vitae.</string>
    <string name="i_accept">I Accept</string>
    <string name="choose_a_profile_picture_for_yourself">Choose a profile picture for yourself.</string>
    <string name="let_s_start">Let’s Start</string>
    <string name="i_accept_the">"I accept the "</string>
    <string name="terms_conditions_and_privacy_policy"><![CDATA[Terms & Conditions and Privacy Policy]]></string>
    <string name="choose_from_library">Choose From Library</string>
    <string name="forget_your_npassword">Forget Your \nPassword</string>
    <string name="enter_your_email_and_we_ll_send_you_a_nlink_to_reset_your_password">Enter your email and we’ll send you a \nlink to reset your password.</string>
    <string name="we_ve_sent_you_a_6_digit_code">We’ve sent you a 6-digit code</string>
    <string name="set_your_npassword">Set Your\nPassword</string>
    <string name="please_create_a_new_password_to_access_your_account">Please create a new password to access your account.</string>
    <string name="change_my_password">Change My Password</string>
    <string name="your_new_password">Your New Password</string>
    <string name="password_again">Password Again</string>
    <string name="you_re_all_set">You\'re all set!</string>
    <string name="your_password_has_been_updated_let_s_get_you_back_to_your_ai_world">Your password has been updated. Let’s get you back to your AI world.</string>
    <string name="friends">Friends</string>
    <string name="chat">Chat</string>
    <string name="settings">Settings</string>
    <string name="my_plan">My Plan</string>
    <string name="arthur_patterson">Arthur Patterson</string>
    <string name="free">Free</string>
    <string name="_25_messages_per_week">25 messages per week</string>
    <string name="up_to_1_ai_contact">Up to 1 AI contact</string>
    <string name="basic">Basic</string>
    <string name="log_out">Log Out</string>
    <string name="upgrade">Upgrade</string>
    <string name="package_details">Package Details</string>
    <string name="cancel_subscription">Cancel Subscription</string>
    <string name="change_password">Change Password</string>
    <string name="please_provide_your_existing_password_and_create_a_new_one_to_secure_your_account">Please provide your existing password and create a new one to secure your account.</string>
    <string name="new_password">New Password</string>
    <string name="plans">Plans</string>
    <string name="classic">Classic</string>
    <string name="unlimited_messages">Unlimited messages</string>
    <string name="_7_ai_contacts">7 AI Contacts</string>
    <string name="yearly">Yearly</string>
    <string name="monthly">Monthly</string>
    <string name="current_plan">Current Plan</string>
    <string name="premium">Premium</string>
    <string name="heavy_chatter">Heavy Chatter</string>
    <string name="unlimited_ai_contacts">Unlimited AI contacts</string>
    <string name="upgraded_memory">Upgraded Memory</string>
    <string name="priority_access_to_new_features">Priority access to new features</string>
    <string name="get_the_package">Get The Package</string>
    <string name="profile_settings">Profile Settings</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="email_address">Email Address</string>
    <string name="characteristics">Characteristics</string>
    <string name="avatar">Avatar</string>
    <string name="personal_details">Personal Details</string>
    <string name="delete_my_account">Delete My Account</string>
    <string name="save_changes">Save Changes</string>
    <string name="search_in_chat">Search in chat</string>
    <string name="ai_contacts">AI Contacts</string>
    <string name="you_haven_t_created_any_ai_friends_yet">You haven’t created any AI\nfriends yet.</string>
    <string name="create_your_first_ai_friend">Create Your First AI Friend</string>
    <string name="create_ai_contact">Create AI Contact</string>
    <string name="what_type_of_contact_do_you_want_to_add">What type of contact do you want to add?</string>
    <string name="i_will_create_it_myself">I will create it myself.</string>
    <string name="congratulations_you_have_ncreated_your_ai_contact">Congratulations, you have\ncreated your Ai Contact</string>
    <string name="start_talking">Start Talking</string>
    <string name="ai_contact">Ai Contact</string>
    <string name="alexia_thomeas">Alexia Thomeas</string>
    <string name="friend">Friend</string>
    <string name="total_message">Total Message</string>
    <string name="time_spent">Time Spent</string>
    <string name="friendly">Friendly</string>
    <string name="relationship">Relationship</string>
    <string name="clean_the_chat">Clean The Chat</string>
    <string name="vircle_is_for_companionship_and_support_only_ai_contacts_are_not_medical_or_licensed_professionals_seek_professional_help_for_serious_matters">Vircle is for companionship and support only. AI contacts are not medical or licensed professionals. Seek professional help for serious matters.</string>
    <string name="other_details">Other Details</string>
    <string name="can_text_you_every">Can text you every</string>
    <string name="on">On</string>
    <string name="at">At</string>
    <string name="what_do_you_want_to_hear">What Do You Want to Hear</string>
    <string name="expertise">Expertise</string>
    <string name="edit_information">Edit Information</string>

</resources>