<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="callback"
            type="com.tech.vircle.utils.BaseCustomDialog.Listener" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/_10sdp"
        android:background="@drawable/round_corner_bg"
>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvTitle"
            style="@style/TextView.bold"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:text="@string/logout"
            android:textSize="@dimen/_13ssp"
            android:textColor="@color/black1"
            android:gravity="center"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvSubHeading"
            style="@style/TextView.medium"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_5sdp"
            android:textSize="@dimen/_14ssp"
            android:text="@string/are_you_sure_to_logout"
            android:gravity="center"
            android:textColor="@color/grey1"
            app:layout_constraintTop_toBottomOf="@id/tvTitle" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvCancel"
            android:layout_width="0dp"
            android:layout_height="@dimen/_30sdp"
            style="@style/TextView.medium"
            android:padding="@dimen/_6sdp"
            android:onClick="@{v->callback.onViewClick(v)}"
            android:layout_marginStart="@dimen/_10sdp"
            android:layout_marginTop="@dimen/_20sdp"
            android:layout_marginBottom="@dimen/_10sdp"
            android:gravity="center"
            android:layout_marginEnd="@dimen/_5sdp"
            android:background="@drawable/btn_bg_with_strock"
            android:text="@string/cancel"
            android:textColor="@color/black3"
            app:layout_constraintTop_toBottomOf="@id/tvSubHeading"
            app:layout_constraintStart_toStartOf="@id/tvTitle"
            app:layout_constraintEnd_toStartOf="@id/tvLogout"
            app:layout_constraintBottom_toBottomOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvLogout"
            android:layout_width="0dp"
            android:layout_height="@dimen/_30sdp"
            style="@style/TextView.medium"
            android:background="@drawable/btn_radius_50"
            android:layout_marginStart="@dimen/_5sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:padding="@dimen/_6sdp"
            android:gravity="center"
            android:text="@string/delete"
            android:onClick="@{v->callback.onViewClick(v)}"
            android:textColor="@color/white"
            app:layout_constraintTop_toTopOf="@id/tvCancel"
            app:layout_constraintStart_toEndOf="@+id/tvCancel"
            app:layout_constraintEnd_toEndOf="@id/tvTitle"
            app:layout_constraintBottom_toBottomOf="@id/tvCancel" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>