<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="vm"
            type="com.tech.vircle.ui.auth.AuthCommonVM" />
    </data>


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:background="@color/light_mode_background"
        android:layout_height="match_parent"
        tools:context=".ui.auth.forgot.AllSetFragment">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivAllSet"
            android:layout_width="127dp"
            android:layout_height="110dp"
            android:layout_marginTop="@dimen/_70sdp"
            android:onClick="@{v->vm.onClick(v)}"
            android:scaleType="centerInside"
            android:src="@drawable/all_set"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvWelcome"
            style="@style/TextView.bold"
            android:layout_marginTop="@dimen/_20sdp"
            android:text="@string/you_re_all_set"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivAllSet" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvSubWelcome"
            style="@style/TextView.semibold2"
            android:layout_width="0dp"
            android:gravity="center_horizontal"
            android:minLines="2"
            android:layout_marginTop="@dimen/_12sdp"
            android:textSize="@dimen/_15ssp"
            android:paddingHorizontal="@dimen/_22sdp"
            android:text="@string/your_password_has_been_updated_let_s_get_you_back_to_your_ai_world"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvWelcome" />



        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/btnLogin"
            style="@style/TextView.bold"
            android:layout_width="0dp"
            android:layout_height="@dimen/_43sdp"
            android:layout_marginBottom="@dimen/_78sdp"
            android:background="@drawable/btn_radius_50"
            android:gravity="center"
            android:onClick="@{v->vm.onClick(v)}"
            android:layout_marginHorizontal="@dimen/_12sdp"
            android:paddingHorizontal="@dimen/_26sdp"
            android:text="@string/log_in"
            android:textColor="@color/white"
            android:textSize="@dimen/_13ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>