<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="callback"
            type="com.tech.vircle.utils.BaseCustomBottomSheet.Listener" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bottom_sheet_bg">


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvTerm"
            style="@style/TextView.semibold"
            android:layout_width="wrap_content"
            android:layout_marginTop="@dimen/_12sdp"
            android:text="@string/terms_amp_conditions"
            android:textColor="@color/black3"
            android:textSize="@dimen/_13ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/backButton"
            android:layout_width="@dimen/_22sdp"
            android:layout_height="@dimen/_22sdp"
            android:layout_marginEnd="@dimen/_14sdp"
            android:onClick="@{v->callback.onViewClick(v)}"
            android:scaleType="centerInside"
            android:src="@drawable/cancel_btn"
            android:tint="@color/black"
            app:layout_constraintBottom_toBottomOf="@+id/tvTerm"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tvTerm" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvTermDesc"
            style="@style/TextView.medium"
            android:layout_width="0dp"
            android:layout_marginHorizontal="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_12sdp"
            android:gravity="start"
            android:text="@string/privacy_policy_desc"
            android:textColor="@color/black3"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvTerm" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/btnIAccept"
            style="@style/TextView.bold"
            android:layout_width="0dp"
            android:layout_height="@dimen/_43sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:background="@drawable/btn_radius_50"
            android:gravity="center"
            android:onClick="@{v->callback.onViewClick(v)}"
            android:paddingHorizontal="@dimen/_26sdp"
            android:text="@string/i_accept"
            android:textColor="@color/white"
            android:textSize="@dimen/_13ssp"
            app:layout_constraintEnd_toEndOf="@+id/tvTermDesc"
            app:layout_constraintStart_toStartOf="@+id/tvTermDesc"
            app:layout_constraintTop_toBottomOf="@+id/tvTermDesc" />

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/TextView.semibold"
            android:layout_width="wrap_content"
            android:layout_marginTop="@dimen/_12sdp"
            android:text="@string/terms_amp_conditions"
            android:textColor="@color/black3"
            android:textSize="@dimen/_13ssp"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btnIAccept" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>