<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="vm"
            type="com.tech.vircle.ui.auth.AuthCommonVM" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:background="@color/light_mode_background"
        android:layout_height="match_parent"
        tools:context=".ui.splash.MySplashFragment">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvWelcome"
            style="@style/TextView.bold"
            android:layout_marginTop="@dimen/_15sdp"
            android:text="@string/welcome_to_vircle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvSubWelcome"
            style="@style/TextView.semibold"
            android:gravity="center_horizontal"
            android:minLines="2"
            android:paddingHorizontal="@dimen/_22sdp"
            android:text="@string/create_your_own_ai_friends"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvWelcome" />

        <androidx.viewpager2.widget.ViewPager2
            android:id="@+id/viewPager"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginHorizontal="@dimen/_20sdp"
            android:layout_marginTop="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_6sdp"
            app:layout_constraintBottom_toTopOf="@+id/flSubscription"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvSubWelcome" />

        <FrameLayout
            android:id="@+id/flSubscription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_32sdp"
            android:paddingHorizontal="@dimen/_5sdp"
            android:paddingVertical="@dimen/_4sdp"
            app:layout_constraintBottom_toTopOf="@+id/btnNext"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <com.zhpan.indicator.IndicatorView
                android:id="@+id/dotsIndicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:vpi_slider_checked_color="@color/white"
                app:vpi_slider_normal_color="@color/color_525252" />
        </FrameLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/btnNext"
            style="@style/TextView.bold"
            android:layout_marginEnd="@dimen/_10sdp"
            android:layout_marginBottom="@dimen/_25sdp"
            android:background="@drawable/btn_radius_50"
            android:gravity="center_horizontal"
            android:onClick="@{v->vm.onClick(v)}"
            android:paddingHorizontal="@dimen/_26sdp"
            android:paddingVertical="@dimen/_8sdp"
            android:text="@string/next"
            android:textColor="@color/white"
            android:textSize="@dimen/_13ssp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>