<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="vm"
            type="com.tech.vircle.ui.home.friends.FriendsFragmentVM" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:background="@color/light_mode_background"
        android:layout_height="match_parent"
        tools:context=".ui.home.friends.create_ai.CreateAiFourFragment">


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tvCreateAIContact"
            style="@style/TextView.bold"
            android:layout_marginStart="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_15sdp"
            android:text="@string/create_ai_contact"
            android:textSize="@dimen/_18ssp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivBack"
            android:layout_width="@dimen/_33sdp"
            android:layout_height="@dimen/_33sdp"
            android:layout_marginEnd="@dimen/_10sdp"
            android:onClick="@{v->vm.onClick(v)}"
            android:padding="@dimen/_4sdp"
            android:tint="@color/black"
            android:rotation="180"
            android:src="@drawable/ic_next"
            app:layout_constraintBottom_toBottomOf="@+id/tvCreateAIContact"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="@+id/tvCreateAIContact" />

        <ProgressBar
            android:id="@+id/progressBar"
            style="@android:style/Widget.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:layout_marginHorizontal="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_25sdp"
            android:progress="100"
            android:progressTint="@color/primaryColor"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivBack" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/subTitle"
            style="@style/TextView.bold"
            android:layout_width="0dp"
            android:gravity="center"
            android:lineHeight="@dimen/_24ssp"
            android:layout_marginTop="@dimen/_42sdp"
            android:text="@string/congratulations_you_have_ncreated_your_ai_contact"
            android:textSize="@dimen/_15ssp"
            android:textColor="@color/black3"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/progressBar"
            app:layout_constraintTop_toBottomOf="@+id/progressBar" />


        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/ivPerson"
            android:layout_width="@dimen/_80sdp"
            android:layout_height="@dimen/_80sdp"
            android:layout_marginTop="44dp"
            android:scaleType="centerCrop"
            android:src="@drawable/profilephoto"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.501"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/subTitle"
            app:shapeAppearance="@style/ShapeAppearanceOverlay.App.CornerSize50Percent" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivEdit"
            android:layout_width="@dimen/_25sdp"
            android:layout_height="@dimen/_25sdp"
            android:onClick="@{v->vm.onClick(v)}"
            android:layout_marginBottom="-6dp"
            android:src="@drawable/editpicture"
            app:layout_constraintBottom_toBottomOf="@+id/ivPerson"
            app:layout_constraintEnd_toEndOf="@+id/ivPerson"
            />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/btnChooseFromLibrary"
            style="@style/TextView.bold"
            android:layout_width="0dp"
            android:layout_height="@dimen/_43sdp"
            android:layout_marginBottom="@dimen/_18sdp"
            android:background="@drawable/btn_bg_with_strock"
            android:gravity="center"
            android:onClick="@{v->vm.onClick(v)}"
            android:paddingHorizontal="@dimen/_26sdp"
            android:text="@string/choose_from_library"
            android:textColor="@color/black3"
            android:textSize="@dimen/_13ssp"
            app:layout_constraintEnd_toEndOf="@+id/btnStartTalking"
            app:layout_constraintStart_toStartOf="@+id/btnStartTalking"
            app:layout_constraintBottom_toTopOf="@+id/btnStartTalking" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/btnStartTalking"
            style="@style/TextView.bold"
            android:layout_width="0dp"
            android:layout_height="@dimen/_43sdp"
            android:layout_marginBottom="@dimen/_20sdp"
            android:background="@drawable/btn_radius_50"
            android:gravity="center"
            android:onClick="@{v->vm.onClick(v)}"
            android:layout_marginHorizontal="@dimen/_12sdp"
            android:paddingHorizontal="@dimen/_26sdp"
            android:text="@string/start_talking"
            android:textColor="@color/white"
            android:textSize="@dimen/_13ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>