<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="vm"
            type="com.tech.vircle.ui.auth.AuthCommonVM" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:background="@color/light_mode_background"
        android:layout_height="match_parent"
        tools:context=".ui.auth.forgot.ForgotEmailFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clCommon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_16sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/loginHeading"
                style="@style/TextView.bold"
                android:layout_marginStart="@dimen/_12sdp"
                android:text="@string/forget_your_npassword"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/subTitle"
                style="@style/TextView.semibold2"
                android:layout_width="0dp"
                android:layout_marginTop="@dimen/_12sdp"
                android:layout_marginEnd="@dimen/_15sdp"
                android:text="@string/enter_your_email_and_we_ll_send_you_a_nlink_to_reset_your_password"
                android:textSize="@dimen/_15ssp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/loginHeading"
                app:layout_constraintTop_toBottomOf="@+id/loginHeading" />


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/backButton"
                android:layout_width="52dp"
                android:layout_height="52dp"
                android:layout_marginEnd="@dimen/_12sdp"
                android:onClick="@{v->vm.onClick(v)}"
                android:background="@drawable/bg_filter"
                app:layout_constraintBottom_toBottomOf="@+id/loginHeading"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="@+id/loginHeading">

                <androidx.appcompat.widget.AppCompatImageView
                    android:layout_width="@dimen/_18sdp"
                    android:layout_height="@dimen/_18sdp"
                    android:src="@drawable/back_icon"
                    android:scaleType="centerInside"
                    android:tint="@color/black"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>


        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/clEmail"
            android:layout_width="match_parent"
            android:layout_height="@dimen/_43sdp"
            android:layout_marginHorizontal="@dimen/_12sdp"
            android:layout_marginTop="@dimen/_50sdp"
            android:background="@drawable/et_bg"
            app:layout_constraintTop_toBottomOf="@+id/clCommon">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/ivEmail"
                android:layout_width="24dp"
                android:tint="@color/grey4"
                android:layout_height="24dp"
                android:layout_marginStart="@dimen/_8sdp"
                android:src="@drawable/email"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <androidx.appcompat.widget.AppCompatEditText
                android:id="@+id/etEmail"
                style="@style/EditText"
                android:layout_width="0dp"
                android:hint="@string/enter_your_email_address"
                android:imeOptions="actionDone"
                android:importantForAutofill="noExcludeDescendants"
                android:inputType="textEmailAddress"
                android:onClick="@{v->vm.onClick(v)}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/ivEmail"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/btnNext"
            style="@style/TextView.bold"
            android:layout_width="0dp"
            android:layout_height="@dimen/_43sdp"
            android:layout_marginBottom="@dimen/_78sdp"
            android:background="@drawable/btn_radius_50"
            android:gravity="center"
            android:onClick="@{v->vm.onClick(v)}"
            android:layout_marginHorizontal="@dimen/_12sdp"
            android:paddingHorizontal="@dimen/_26sdp"
            android:text="@string/next"
            android:textColor="@color/white"
            android:textSize="@dimen/_13ssp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>